--- a/lab1/css/style.css
+++ b/lab1/css/style.css
@@ -408,4 +408,8 @@ footer div:hover a {
 ol ul, ul ol, ul ul, ol ol {
   margin-left: 30px;
 }
+
+.download {
+  text-align: center;
+}
 /*# sourceMappingURL=style.css.map */
