--- a/lab3/css/style.sass
+++ b/lab3/css/style.sass
@@ -172,6 +172,10 @@ section
          font-family: Arial, sans-serif
          margin: 0 auto
          line-height: 30px
+         a
+            text-decoration: none
+            @include main-text
+            color: $text-default-color
          img
             max-width: 1200px
             margin: 20px 0
@@ -241,3 +245,5 @@ footer
    visibility: hidden
 ol ul, ul ol, ul ul, ol ol
    margin-left: 30px
+.download
+   text-align: center
