--- a/lab3/css/style.css
+++ b/lab3/css/style.css
@@ -282,6 +282,12 @@ section .content-window .text {
   line-height: 30px;
 }
 
+section .content-window .text pre {
+  -moz-tab-size: 2;
+    -o-tab-size: 2;
+       tab-size: 2;
+}
+
 section .content-window .text a {
   text-decoration: none;
   font-family: 'Montserrat', sans-serif;
