--- a/lab3/css/style.sass
+++ b/lab3/css/style.sass
@@ -172,6 +172,8 @@ section
          font-family: Arial, sans-serif
          margin: 0 auto
          line-height: 30px
+         pre
+            tab-size: 2
          a
             text-decoration: none
             @include main-text
