--- a/lab4/css/style.css
+++ b/lab4/css/style.css
@@ -401,4 +401,13 @@ footer div:hover a {
 ol ul, ul ol, ul ul, ol ol {
   margin-left: 30px;
 }
+.download {
+  text-align: center;
+}
+
+pre {
+  -moz-tab-size: 2;
+    -o-tab-size: 2;
+       tab-size: 2;
+}
 /*# sourceMappingURL=style.css.map */
