--- a/lab4/css/style.sass
+++ b/lab4/css/style.sass
@@ -241,3 +241,7 @@ footer
    visibility: hidden
 ol ul, ul ol, ul ul, ol ol
    margin-left: 30px
+.download
+   text-align: center
+pre
+   tab-size: 2
