--- a/css/style.css
+++ b/css/style.css
@@ -186,8 +186,10 @@ section .portfolio:hover .name {
 }
 
 footer {
+  bottom: 0;
+  position: fixed;
   width: 100%;
-  height: 5vh;
+  padding: 5px;
   background-color: #EBEBEB;
   -webkit-box-shadow: 0px 0px 5px rgba(0, 0, 0, 0.5);
           box-shadow: 0px 0px 5px rgba(0, 0, 0, 0.5);
