--- a/css/style.sass
+++ b/css/style.sass
@@ -115,8 +115,10 @@ section
             transition: .4s ease 
 
 footer
+   bottom: 0
+   position: fixed
    width: 100%
-   height: 5vh 
+   padding: 5px
    background-color: $background-color
    box-shadow: 0px 0px 5px rgba(0,0,0,0.5)
    display: flex
