--- a/lab6/css/style.css
+++ b/lab6/css/style.css
@@ -115,6 +115,7 @@ nav .nav-element:hover a {
 
 section {
   padding: 30px;
+  margin-bottom: 40px;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -156,7 +157,7 @@ section .menu .menu-item:hover {
 
 section .menu .drop-out {
   width: 100%;
-  margin-bottom: 20px;
+  margin-top: 20px;
   background-color: #FFFFFF;
   cursor: pointer;
   text-transform: capitalize;
@@ -194,16 +195,45 @@ section .menu .drop-out .drop-down {
   cursor: default;
 }
 
-section .menu .drop-out .drop-down svg {
-  fill: #FFFFFF;
-  position: absolute;
-  top: 25px;
-  right: 25px;
+section .menu .drop-out .drop-down:hover {
+  color: #F5CB5C;
   cursor: pointer;
 }
 
-section .menu .drop-out .drop-down svg:hover {
-  fill: #F5CB5C;
+section .menu .drop-out .drop-down::after {
+  -webkit-transition-duration: .3s;
+          transition-duration: .3s;
+  -webkit-transition-property: border-color transform;
+  transition-property: border-color transform;
+  cursor: pointer;
+  content: '';
+  height: 15px;
+  width: 15px;
+  top: 50%;
+  border-radius: 2px;
+  -webkit-transform: translateY(-65%) rotate(45deg);
+          transform: translateY(-65%) rotate(45deg);
+  position: absolute;
+  right: 20px;
+  border: 3px solid #EBEBEB;
+  border-top: none;
+  border-left: none;
+}
+
+section .menu .drop-out .open-drop {
+  color: #F5CB5C;
+}
+
+section .menu .drop-out .open-drop::after {
+  -webkit-transition-duration: .3s;
+          transition-duration: .3s;
+  -webkit-transition-property: border-color transform;
+  transition-property: border-color transform;
+  -webkit-transform: translateY(-30%) rotate(225deg);
+          transform: translateY(-30%) rotate(225deg);
+  border: 3px solid #F5CB5C;
+  border-top: none;
+  border-left: none;
 }
 
 section .menu .drop-out .container {
@@ -246,7 +276,7 @@ section .content-window {
       -ms-flex-direction: column;
           flex-direction: column;
   overflow: auto;
-  height: 630px;
+  height: 600px;
 }
 
 section .content-window .code {
@@ -334,8 +364,10 @@ section .content-window .code-img img {
 }
 
 footer {
+  bottom: 0;
+  position: fixed;
   width: 100%;
-  height: 5vh;
+  padding: 5px;
   background-color: #EBEBEB;
   -webkit-box-shadow: 0px 0px 5px rgba(0, 0, 0, 0.5);
           box-shadow: 0px 0px 5px rgba(0, 0, 0, 0.5);
@@ -401,6 +433,7 @@ footer div:hover a {
 ol ul, ul ol, ul ul, ol ol {
   margin-left: 30px;
 }
+
 .download {
   text-align: center;
 }
